--- a/review/cpp/Makefile
+++ b/review/cpp/Makefile
@@ -1,7 +1,12 @@
 include ../../setup_vars.mk
 
+TEMP='date'
+TEMP2='date /t'
+
 default_target : all
 	@echo $(PC_ID)
+	@echo $(TEMP)
+	@echo $(TEMP2)
 
 
 .PHONY : all
