new default_run_target in run_target.mk.

--- a/stl/Makefile
+++ b/stl/Makefile
@@ -2,14 +2,14 @@ include ../../setup_vars.mk
 
 
 CPP_SRC_FILES=*.cpp
-
-default_target : all
-
-
-.PHONY : default_target
+DEFAULT_TARGET_NAME=stlmain
 
 
 all :
-	
+	$(CXX) $(CPP_SRC_FILES) $(CXXFLAGS) -o $(DEFAULT_TARGET_NAME)
+
+
+
+include ../../run_target.mk
 
 
