--- a/stl/Makefile
+++ b/stl/Makefile
@@ -3,6 +3,8 @@ include ../../setup_vars.mk
 
 CPP_SRC_FILES=*.cpp
 
+CPP_DEFAULT_TARGET_NAME=
+
 default_target : all
 
 
@@ -13,3 +15,5 @@ all :
 	
 
 
+RUN_TARGET :
+	$(CPP_DEFAULT_TARGET_NAME)
