--- a/review/cpp/Makefile
+++ b/review/cpp/Makefile
@@ -1,12 +1,19 @@
 include ../../setup_vars.mk
 
-TEMP='date'
-TEMP2='date /t'
+TEMP=`date`
+TEMP2=`date -u`
 
+
+.PHONY : all
+.PHONY : default_target
+
+#*? represent all the changed depends targets
+#-rm - means don't show errors
 default_target : all
 	@echo $(PC_ID)
 	@echo $(TEMP)
 	@echo $(TEMP2)
 
 
-.PHONY : all
+
+
